<resources>
    <string name="app_name">Belajar Bahasa Inggris</string>
    <string name="pages"> pages</string>
    <string name="title_activity_simple_past">SimplePast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="backdrop_title">Belajar Bahasa Inggris</string>
    <string name="backdrop_subtitle">Indra Sudirman</string>
    <string name="exercises"><b><u>Latihan :</u></b></string>
    <string name="hint">Ketik jawaban disini … \t </string>
    <string name="dragndrop">Tahan lama untuk <b>Drag</b> pilihan di bawah ini, kemudian <b>Drop</b> pada isian di atas</string>
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="action_settings">Settings</string>
    <string name="profile_email">indra.indrabayu@gmail.com</string>
    <string name="profile_title">Indra Sudirman</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">Set profile image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="simple_past_tense"><b><u>Simple Past Tense</u></b></string>
    <string name="simple_past_explain"><b>Simple Past Tense digunakan untuk menyatakan kejadian yang sudah selesai dan tidak ada hubungan sama sekali dengan saat ini (sekarang)</b>, biasanya hanya untuk menceritakan kejadian yang lalu saja. Simple Past Tense juga biasa digunakan untuk menyatakan sesuatu yang sudah terjadi dalam cerita.</string>
    <string name="example">Contoh :</string>
    <string name="first_bullet">■ My Parent lived in Germany in 2002.\n \t\t(Kedua orangtua saya pernah tinggal\n \t\t di Jerman pada tahun 2002)</string>
    <string name="second_bullet">■ I bought a new smartphone last week.\n \t\t(Saya sudah membeli smartphone\n \t\t baru minggu lalu)</string>
    <string name="third_bullet">■ Pinocchio’s nose grew longer every time\n \t\t he told a lie.\n \t\t(Hidung Pinocchio bertambah panjang\n \t\t setiap dia mengatakan kebohongan)</string>
    <string name="mengerti">Bagaimana, sudah mengerti? Jika sudah paham klik <b>next</b> untuk mencoba mengerjakan test.</string>
    <string name="info"><b><u>Info :</u></b> \n\n- I, it, Budi, Lubna (orang ketiga tunggal) to be <b>was</b>\n- You, We, They, Budi dan Lubna (bentuk banyak) to be <b>were</b></string>
    <string name="exercise_simple_past_test1">1. I … Nasi goreng yesterday</string>
    <string name="first_exercise_meaning_test1">\t Saya makan Nasi goreng kemarin.</string>
    <string name="exercise_simple_past_test2">2. My Sister … Dieng Central Java last year.</string>
    <string name="first_exercise_meaning_test2">\t Saudara perempuan saya mengunjungi Dieng\n \t Jawa Tengah tahun lalu.</string>
    <string name="exercise_simple_past_test3">3. Cinderella … with her stepmother and her\n \t\t two stepsisters, Anastasia and Drizella.</string>
    <string name="first_exercise_meaning_test3">\t Cinderella tinggal bersama Ibu tiri dan\n \t kedua Saudara perempuan tirinya.</string>
    <string name="ate">Ate</string>
    <string name="visited">Visited</string>
    <string name="lived">Lived</string>
    <string name="pola_kalimat_simple_past">Pola kalimat Simple Past</string>
    <string name="bentuk_kalimat_verbal_simple_past">■ Bentuk kalimat verbal</string>
    <string name="bentuk_kalimat_nominal_simple_past">■ Bentuk kalimat nominal</string>
    <string name="bentuk_kalimat_verbal_positif_simple_past">\t\t(+) Positif : Subject + V2 (Verb 2) + Object. \n\t\t Contoh : Lubna played Puzzle last night. \n\t\t (Lubna bermain Puzzle semalam)</string>
    <string name="bentuk_kalimat_verbal_negatif_simple_past">\t\t(-) Negatif : Subject + did + not + V1 (Verb 1) + \n\t\t Object. \n\t\t Contoh : Lubna did not play Puzzle last night. \n\t\t (Lubna tidak bermain Puzzle semalam)</string>
    <string name="bentuk_kalimat_verbal_question_simple_past">\t\t(?) Question : Did + Subject + V1 (Verb 1) + Object? \n\t\t Contoh : Did Lubna play Puzzle last night? \n\t\t (Apakah Lubna bermain Puzzle semalam?)</string>
    <string name="bentuk_kalimat_nominal_positif_simple_past">\t\t(+) Positif : Subject + (was/were) + 3 Complement. \n\t\t Contoh : I was happy on my Birthday party\n\t\t last week. \n\t\t (Saya senang pada acara Ulang tahun saya\n\t\t minggu lalu)</string>
    <string name="bentuk_kalimat_nominal_negatif_simple_past">\t\t(-) Negatif : Subject + (was/were) + not +\n\t\t 3 Complement. \n\t\t Contoh : I was not happy on my Birthday party\n\t\t last week.\n\t\t (Saya tidak senang pada acara Ulang tahun\n\t\t saya minggu lalu)</string>
    <string name="bentuk_kalimat_nominal_question_simple_past">\t\t(?) Question : (was/were) + Subject +\n\t\t 3 Complement? \n\t\t Contoh : Was she sick yesterday?\n\t\t (Apakah dia (perempuan) sakit kemarin?</string>
    <string name="dan_lainnya">-</string>
    <string name="contoh_keterangan_waktu_time_signal">Contoh keterangan waktu (Time signal)</string>
    <string name="last_time">Last + Time</string>
    <string name="cardinal_time_ago">Cardinal + Time + Ago</string>
    <string name="specific_time_in_the_past">Specific time in the past</string>
    <string name="last_sunday">Last Sunday</string>
    <string name="one_day_ago">One day ago</string>
    <string name="yesterday">Yesterday</string>
    <string name="last_day">Last day</string>
    <string name="two_days_ago">Two days ago</string>
    <string name="the_day_before_yesterday">The day before yesterday</string>
    <string name="last_night">Last night</string>
    <string name="three_weeks_ago">Three weeks ago</string>
    <string name="two_days_before_yesterday">Two days before yesterday</string>
    <string name="last_morning">Last morning</string>
    <string name="four_years_ago">Four years ago</string>
    <string name="one_week_before">One week before</string>
    <string name="last_week">Last week</string>
    <string name="in_1990">In 1990</string>
    <string name="last_month">Last month</string>
    <string name="last_year">Last year</string>
    <string name="cek_jawaban">Cek Jawaban</string>
    <string name="register_here">Don\'t have account! Register here!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="next">Next</string>
    <string name="drop_jawaban_disini">Drop jawaban disini …</string>
    <string name="exercise_simple_past_test_two">1. Lubna … Bicycle last week.</string>
    <string name="first_exercise_meaning_test_two">\t Lubna mengendarai Sepeda minggu lalu.</string>
    <string name="exercise_simple_past_test2_two">2. Lubna … bike Bicycle last week.</string>
    <string name="first_exercise_meaning_test2_two">\t Lubna tidak mengendarai Sepeda minggu lalu.</string>
    <string name="exercise_simple_past_test3_two">3. … Lubna bike Bicycle last week?</string>
    <string name="first_exercise_meaning_test3_two">\t Apakah Lubna mengendarai Sepeda minggu lalu?</string>
    <string name="biked">Biked</string>
    <string name="did_not">did not</string>
    <string name="did">Did</string>
    <string name="exercise_simple_past_test_3_1">1. You … happy on your Birthday party.</string>
    <string name="first_exercise_meaning_test_3_1">\t Kamu terlihat senang pada pesta ulang tahunmu.</string>
    <string name="exercise_simple_past_test_3_2">2. You … happy on your Birthday party.</string>
    <string name="first_exercise_meaning_test_3_2">\t Kamu terlihat tidak senang pada \n\t\tpesta ulang tahunmu.</string>
    <string name="exercise_simple_past_test_3_3">3. … You happy on your Birthday party?</string>
    <string name="first_exercise_meaning_test_3_3">\t Apakah kamu senang pada pesta ulang tahunmu?</string>
    <string name="exercise_simple_past_test_3_4">4. … Zatul happy on his Birthday party?</string>
    <string name="contoh_keterangan_waktu_time_signal_simple_present">Contoh keterangan waktu (Time signal) pada Simple Present Tense</string>
    <string name="time_signal">Time Signal</string>
    <string name="artinya">Artinya</string>
    <string name="always">Always</string>
    <string name="selalu">Selalu</string>
    <string name="often">Often</string>
    <string name="sering">Sering</string>
    <string name="seldom">Seldom</string>
    <string name="jarang">Jarang</string>
    <string name="rarely">Rarely</string>
    <string name="sangat_jarang">Sangat Jarang</string>
    <string name="never">Never</string>
    <string name="tidak_pernah">Tidak Pernah</string>
    <string name="usually">Usually, Generally, Habitually</string>
    <string name="biasanya">Biasanya</string>
    <string name="sometimes">Sometimes, Occasionally</string>
    <string name="kadang_kadang">Kadang kadang</string>
    <string name="every_time">Every time</string>
    <string name="setiap_saat">Setiap saat</string>
    <string name="every_day">Every day</string>
    <string name="setiap_hari">Setiap hari</string>
    <string name="every_night">Every night</string>
    <string name="setiap_malam">Setiap malam</string>
    <string name="every_month">Every month</string>
    <string name="setiap_bulan">Setiap bulan</string>
    <string name="every_year">Every year</string>
    <string name="setiap_tahun">Setiap tahun</string>
    <string name="every_week">Every week</string>
    <string name="setiap_minggu">Setiap minggu</string>
    <string name="once_a_week">Once a week</string>
    <string name="sekali_seminggu">Sekali seminggu</string>
    <string name="twice_a_week">Twice a week</string>
    <string name="dua_kali_seminggu">Dua kali seminggu</string>
    <string name="past_perfect_tense"><b><u>Past Perfect Tense</u></b></string>
    <string name="past_perfect_explain">Past Perfect Tense digunakan untuk menyatakan kejadian (aktivitas) yang <b>sudah selesai pada masa lampau (past), sebelum kejadian lain yang sudah selesai juga.</b> \n\nItulah sebabnya menjadi kata <b>Past Perfect</b> yang lalu sudah selesai semua. Jadi kalimat dalam Past Perfect ini telah terjadi pada masa lalu. Contoh: When I met Nury, <b>she had looked</b> very different. (Ketika saya bertemu Nury, dia (perempuan) terlihat sangat berbeda). \n\n<b><u>Penjelasannya :</u></b> \n\n Pada Past Perfect Tense terdapat istilah kejadian ke satu dan kejadian ke dua. Kalimat Past Perfect Tense berada di kejadian ke satu. Sedangkan kejadian lalu yang mengikuti Past Perfect adalah Simple Past (kejadian ke dua).</string>
    <string name="second_bullet_past_perfect_tense">■ When I met Nury, she had looked very different.\n\n \t\t(Ketika saya bertemu Nury, dia (perempuan/Nury) \n\t\tterlihat sangat berbeda).</string>
    <string name="third_bullet_past_perfect_tense">■ Haby had arrived, before I arrived at school \n\t\tthis morning. \n\n \t\t (Haby sudah tiba, sebelum saya tiba \n\t\tdi sekolah pagi).</string>
</resources>