<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".simplepresent.SimplePresentFragment5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="vertical"
            android:padding="5dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:shrinkColumns="*"
                android:stretchColumns="*">


                <!-- Row 1 with single column -->
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">


                    <TextView
                        android:id="@+id/time_signal_simple_past"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/contoh_keterangan_waktu_time_signal_simple_present"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />


                </TableRow>

                <!-- Row 2 with 3 columns -->

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="200dip"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/time_signal"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/TextView02"
                        android:layout_width="200dip"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/artinya"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />
                </TableRow>

                <!-- Row 3 with 2 columns -->
                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TextView04"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/always"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/TextView05"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/selalu"
                        android:textColor="@color/colorBlack" />

                </TableRow>

                <!-- Row 4 with 3 columns -->
                <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TextView07"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/often"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/TextView08"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/sering"
                        android:textColor="@color/colorBlack" />

                </TableRow>


                <!-- Row 5 with 3 columns -->
                <TableRow
                    android:id="@+id/tableRow5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TextView10"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/seldom"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/TextView11"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/jarang"
                        android:textColor="@color/colorBlack" />
                </TableRow>


                <!-- Row 6 with 3 columns -->
                <TableRow
                    android:id="@+id/tableRow6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TextView13"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/rarely"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/TextView14"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/sangat_jarang"
                        android:textColor="@color/colorBlack" />

                </TableRow>


                <!-- Row 7 with 3 columns -->
                <TableRow
                    android:id="@+id/tableRow7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TextView16"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/never"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/TextView17"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/tidak_pernah"
                        android:textColor="@color/colorBlack" />

                </TableRow>


                <!-- Row 8 with 3 columns -->
                <TableRow
                    android:id="@+id/tableRow8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TextView19"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/usually"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/TextView20"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/biasanya"
                        android:textColor="@color/colorBlack" />

                </TableRow>


                <!-- Row 9 with 3 columns -->
                <TableRow
                    android:id="@+id/tableRow9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/TextView22"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/sometimes"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:id="@+id/TextView23"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/kadang_kadang"
                        android:textColor="@color/colorBlack" />

                </TableRow>

                <!-- Row 10 with 2 columns -->
                <TableRow
                    android:id="@+id/tableRow10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/every_time"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/setiap_saat"
                        android:textColor="@color/colorBlack" />

                </TableRow>

                <!-- Row 11 with 2 columns -->
                <TableRow
                    android:id="@+id/tableRow11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/every_day"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/setiap_hari"
                        android:textColor="@color/colorBlack" />

                </TableRow>

                <!-- Row 12 with 2 columns -->
                <TableRow
                    android:id="@+id/tableRow12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/every_night"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/setiap_malam"
                        android:textColor="@color/colorBlack" />

                </TableRow>

                <!-- Row 13 with 2 columns -->
                <TableRow
                    android:id="@+id/tableRow13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/every_week"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/setiap_minggu"
                        android:textColor="@color/colorBlack" />

                </TableRow>

                <!-- Row 14 with 2 columns -->
                <TableRow
                    android:id="@+id/tableRow14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/every_month"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/setiap_bulan"
                        android:textColor="@color/colorBlack" />

                </TableRow>

                <!-- Row 15 with 2 columns -->
                <TableRow
                    android:id="@+id/tableRow15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/every_year"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/setiap_tahun"
                        android:textColor="@color/colorBlack" />

                </TableRow>

                <!-- Row 16 with 2 columns -->
                <TableRow
                    android:id="@+id/tableRow16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/once_a_week"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/sekali_seminggu"
                        android:textColor="@color/colorBlack" />

                </TableRow>

                <!-- Row 17 with 2 columns -->
                <TableRow
                    android:id="@+id/tableRow17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/twice_a_week"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/dua_kali_seminggu"
                        android:textColor="@color/colorBlack" />

                </TableRow>

                <!-- Row 18 with 1 columns -->

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="3"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="dan contoh lainnya ..."
                        android:textColor="@color/colorBlack" />


                </TableRow>


            </TableLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom" />

        </LinearLayout>


    </ScrollView>

</FrameLayout>